fixed header sizing on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,4 +157,10 @@ footer {
     .card {
         margin-bottom: 12px;
     }
+    h1 {
+        font-size: 24px;
+    }
+    .banner h1 {
+        font-size: 26px;
+    }
 }
